--- a/230927_ML_전력사용량_예측_AI_경진대회.ipynb
+++ b/230927_ML_전력사용량_예측_AI_경진대회.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Wlk5lPNlC3hwFCtacQEIwuRlK2ywKA_5",
-      "authorship_tag": "ABX9TyNS0nh7BJtiOJHRNxl8u5hX",
+      "authorship_tag": "ABX9TyMswPR5bVv2052b3DgT+dRm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MXBcJ3i1HN1Y",
-        "outputId": "5be87ae2-328b-4c9b-8a45-5e08068e6758"
+        "outputId": "f2c6690d-6734-408d-cd23-872c1e4bb169"
       },
       "execution_count": 1,
       "outputs": [
@@ -114,7 +114,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CZUHg3kp4Mmh",
-        "outputId": "a1263f84-4f9c-4223-be8d-f526f13a100a"
+        "outputId": "89283136-1846-489b-ff59-c888c4ae8a70"
       },
       "execution_count": 2,
       "outputs": [
@@ -125,7 +125,7 @@
             "Requirement already satisfied: lightgbm in /usr/local/lib/python3.10/dist-packages (4.0.0)\n",
             "Collecting optuna\n",
             "  Downloading optuna-3.3.0-py3-none-any.whl (404 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m404.2/404.2 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m404.2/404.2 kB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from lightgbm) (1.23.5)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from lightgbm) (1.11.2)\n",
             "Collecting alembic>=1.5.0 (from optuna)\n",
@@ -141,7 +141,7 @@
             "Requirement already satisfied: PyYAML in /usr/local/lib/python3.10/dist-packages (from optuna) (6.0.1)\n",
             "Collecting Mako (from alembic>=1.5.0->optuna)\n",
             "  Downloading Mako-1.2.4-py3-none-any.whl (78 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.7/78.7 kB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.7/78.7 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: typing-extensions>=4 in /usr/local/lib/python3.10/dist-packages (from alembic>=1.5.0->optuna) (4.5.0)\n",
             "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy>=1.3.0->optuna) (2.0.2)\n",
             "Requirement already satisfied: MarkupSafe>=0.9.2 in /usr/local/lib/python3.10/dist-packages (from Mako->alembic>=1.5.0->optuna) (2.1.3)\n",
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "WHC8Bg1j5KM_"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -213,14 +213,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# On your Own\n",
+        "## On your Own\n",
         "# 1. 결측치 확인\n",
         "# 2. dtype이 object인 column --> categorical feature\n",
         "# 3. target value distribution\n",
         "# 4. train.info(memory_usage = 'deep)\n",
         "test.info()\n",
         "test\n",
-        "# 예측 데이터(test data)의 전처리 성능이 엄청나게 영향을 준다.\n",
+        "## 예측 데이터(test data)의 전처리 성능이 엄청나게 영향을 준다. --> 시계열 데이터인 경우\n",
         "# 2020-06-01 0시 ~ 2020-08-24 23시 (관측치) ----> 2020-08-25 0시 ~ 2020-08-31 23시 (예보 데이터)"
       ],
       "metadata": {
@@ -229,9 +229,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 908
         },
-        "outputId": "8298747e-cd71-4cf0-8532-09de752beafd"
+        "outputId": "d1573fec-15f9-4a3e-8f70-5aa0ccff890c"
       },
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +289,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8bca82ad-0ddf-492a-a8c2-8569798b135b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e5470911-9156-4f2c-bfb1-291616710f17\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -459,7 +459,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8bca82ad-0ddf-492a-a8c2-8569798b135b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e5470911-9156-4f2c-bfb1-291616710f17')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -511,12 +511,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8bca82ad-0ddf-492a-a8c2-8569798b135b button.colab-df-convert');\n",
+              "        document.querySelector('#df-e5470911-9156-4f2c-bfb1-291616710f17 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8bca82ad-0ddf-492a-a8c2-8569798b135b');\n",
+              "        const element = document.querySelector('#df-e5470911-9156-4f2c-bfb1-291616710f17');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -536,8 +536,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-91e2481e-2064-4640-aa04-80ffe1ea9ba7\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-91e2481e-2064-4640-aa04-80ffe1ea9ba7')\"\n",
+              "<div id=\"df-8ba0add7-58e3-4e60-8390-a5d086cf96b0\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8ba0add7-58e3-4e60-8390-a5d086cf96b0')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -656,7 +656,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-91e2481e-2064-4640-aa04-80ffe1ea9ba7 button');\n",
+              "        document.querySelector('#df-8ba0add7-58e3-4e60-8390-a5d086cf96b0 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -667,17 +667,82 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 6
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "train.columns = ['num', 'date_time', 'target', 'temperature', 'windspeed', 'humidity',\n",
+        "                 'precipitation', 'insolation', 'is_cool', 'is_solar']\n",
+        "test.columns = ['num', 'date_time', 'temperature', 'windspeed', 'humidity',\n",
+        "                 'precipitation', 'insolation', 'is_cool', 'is_solar']\n",
+        "\n",
+        "train.info()\n",
+        "test.info()"
+      ],
       "metadata": {
-        "id": "yHjsp0l-6ota"
+        "id": "yHjsp0l-6ota",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cc6986b4-0168-411a-f34b-1dfb6fee1051"
       },
-      "execution_count": null,
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 122400 entries, 0 to 122399\n",
+            "Data columns (total 10 columns):\n",
+            " #   Column         Non-Null Count   Dtype  \n",
+            "---  ------         --------------   -----  \n",
+            " 0   num            122400 non-null  int64  \n",
+            " 1   date_time      122400 non-null  object \n",
+            " 2   target         122400 non-null  float64\n",
+            " 3   temperature    122400 non-null  float64\n",
+            " 4   windspeed      122400 non-null  float64\n",
+            " 5   humidity       122400 non-null  float64\n",
+            " 6   precipitation  122400 non-null  float64\n",
+            " 7   insolation     122400 non-null  float64\n",
+            " 8   is_cool        122400 non-null  float64\n",
+            " 9   is_solar       122400 non-null  float64\n",
+            "dtypes: float64(8), int64(1), object(1)\n",
+            "memory usage: 9.3+ MB\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 10080 entries, 0 to 10079\n",
+            "Data columns (total 9 columns):\n",
+            " #   Column         Non-Null Count  Dtype  \n",
+            "---  ------         --------------  -----  \n",
+            " 0   num            10080 non-null  int64  \n",
+            " 1   date_time      10080 non-null  object \n",
+            " 2   temperature    3360 non-null   float64\n",
+            " 3   windspeed      3360 non-null   float64\n",
+            " 4   humidity       3360 non-null   float64\n",
+            " 5   precipitation  1680 non-null   float64\n",
+            " 6   insolation     3360 non-null   float64\n",
+            " 7   is_cool        2296 non-null   float64\n",
+            " 8   is_solar       1624 non-null   float64\n",
+            "dtypes: float64(7), int64(1), object(1)\n",
+            "memory usage: 708.9+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Q. 과연 같은 건물이면, 2020-06-01 ~ 2020-08-24 기간 동안 건물정보(is_cool, is_solar)가 안 바뀔까?\n",
+        "# 시도 -> 만약 안 바뀐다면 어떤 특징이 있을까? -- 건물정보가 같을 것이다.\n",
+        "# 건물별로 뽑아서, 건물정보가 같은지 확인.\n"
+      ],
+      "metadata": {
+        "id": "C9CX8arkPS69"
+      },
+      "execution_count": 7,
       "outputs": []
     }
   ]
