Colaboratory를 통해 생성됨

--- a/230927_실습_ML_전력사용량_예측_AI_경진대회.ipynb
+++ b/230927_실습_ML_전력사용량_예측_AI_경진대회.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Wlk5lPNlC3hwFCtacQEIwuRlK2ywKA_5",
-      "authorship_tag": "ABX9TyPoObkBTKxSblWmK6Di0C44",
+      "authorship_tag": "ABX9TyOD1Mi8defAZiJYxPrmBAkK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,7 +217,7 @@
         "id": "gjBk0Wa85tJ9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 908
+          "height": 926
         },
         "outputId": "60689416-50fa-423d-b2bc-084d0b6f348b"
       },
@@ -1175,7 +1175,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 347
+          "height": 315
         },
         "id": "1WLoL_yGCR_3",
         "outputId": "af9c3892-9d93-4b66-d5da-c2c012ecbd28"
@@ -1231,9 +1231,50 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "test.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3GNkL3yxtJf_",
+        "outputId": "3979658f-979c-4e4d-def6-2b52e3e83e3d"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 10080 entries, 0 to 10079\n",
+            "Data columns (total 9 columns):\n",
+            " #   Column         Non-Null Count  Dtype         \n",
+            "---  ------         --------------  -----         \n",
+            " 0   num            10080 non-null  int64         \n",
+            " 1   date_time      10080 non-null  datetime64[ns]\n",
+            " 2   temperature    10080 non-null  float64       \n",
+            " 3   windspeed      10080 non-null  float64       \n",
+            " 4   humidity       10080 non-null  float64       \n",
+            " 5   precipitation  10080 non-null  float64       \n",
+            " 6   insolation     10080 non-null  float64       \n",
+            " 7   is_cool        10080 non-null  float64       \n",
+            " 8   is_solar       10080 non-null  float64       \n",
+            "dtypes: datetime64[ns](1), float64(7), int64(1)\n",
+            "memory usage: 787.5 KB\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "# training"
+        "# training\n",
+        "\n",
+        "1) train validation split해서 random forest 실행   \n",
+        "2) random forest 파라미터 변경해가면서 가장 최적의 셋팅 찾기"
       ],
       "metadata": {
         "id": "v7lSAkDdYIdj"
@@ -1245,80 +1286,147 @@
         "# data setting for training\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "X = train.drop(columns=['target']) # feature vector\n",
-        "y = train.target # target value\n",
+        "X = train.drop(columns=['date_time']) # feature vector\n",
+        "y = train.date_time # target value\n",
         "\n",
         "# 트테트테\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state = 42)\n",
-        "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state=42)\n",
+        "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size = 0.2, random_state = 42)\n",
+        "\n",
+        "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)\n",
+        "print(X_train.shape, X_val.shape, y_train.shape, y_val.shape)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "66b-znPZXt4M",
-        "outputId": "929ba4cd-a1c6-4875-a414-d99cac612b09"
+        "outputId": "d9f50e01-6f1f-4bca-d7f2-5b58267795e4"
       },
-      "execution_count": 36,
+      "execution_count": 57,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(122400, 9)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 36
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(78336, 9) (24480, 9) (78336,) (24480,)\n",
+            "(78336, 9) (19584, 9) (78336,) (19584,)\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# training(=fitting)\n",
-        "# sklearn에서 학습을 하는 방법\n",
-        "# 1. 사용할 함수를 불러온다.\n",
-        "# 2. 해당 함수를 선언한다.\n",
-        "# 3. fit()\n",
-        "\n",
-        "from sklearn.metrics import confusion_matrix, f1_score\n",
-        "from sklearn.metrics import accuracy_score\n",
         "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
-        "from sklearn.tree import DecisionTreeClassifier, export_graphviz\n",
-        "from collections import Counter\n",
-        "from sklearn import tree\n",
         "\n",
-        "clf = RandomForestClassifier(n_estimators=20, max_depth=5, random_state=0)\n",
-        "clf.fit(X_train, y_train)\n",
+        "clf_model = RandomForestClassifier(n_estimators = 10, max_depth = 5, random_state = 42)\n",
+        "clf_model.fit(X_train, y_train)\n",
         "\n",
-        "predict1 = clf.predic(X_test)\n",
-        "print(accuracy_score(y_test, predict1))"
+        "y_pre_train = clf_model.predict(X_test)\n",
+        "print(accuracy_score(y_test, y_pre_train))"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 410
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "5lh8RjArXv-J",
-        "outputId": "372bbefa-3ff9-4413-f429-57df153caefd"
+        "id": "nRXRdhItxK1I",
+        "outputId": "7b905488-4f52-4358-bc9f-3b048fc5234f"
       },
-      "execution_count": 33,
+      "execution_count": 77,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-33-dba61fc05c90>\u001b[0m in \u001b[0;36m<cell line: 15>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_estimators\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mpredict1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/sklearn/ensemble/_forest.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    343\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0missparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    344\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"sparse multilabel-indicator for y is not supported.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 345\u001b[0;31m         X, y = self._validate_data(\n\u001b[0m\u001b[1;32m    346\u001b[0m             \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"csc\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDTYPE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    347\u001b[0m         )\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/sklearn/base.py\u001b[0m in \u001b[0;36m_validate_data\u001b[0;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[1;32m    582\u001b[0m                 \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"y\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mcheck_y_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    583\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 584\u001b[0;31m                 \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_X_y\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mcheck_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    585\u001b[0m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    586\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, estimator)\u001b[0m\n\u001b[1;32m   1104\u001b[0m         )\n\u001b[1;32m   1105\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1106\u001b[0;31m     X = check_array(\n\u001b[0m\u001b[1;32m   1107\u001b[0m         \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1108\u001b[0m         \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maccept_sparse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[0m\n\u001b[1;32m    776\u001b[0m         )\n\u001b[1;32m    777\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtype_iter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mdtype_iter\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdtypes_orig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 778\u001b[0;31m             \u001b[0mdtype_orig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdtypes_orig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    779\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    780\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"iloc\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"dtype\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/numpy/core/overrides.py\u001b[0m in \u001b[0;36mresult_type\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: The DType <class 'numpy.dtype[datetime64]'> could not be promoted by <class 'numpy.dtype[float64]'>. This means that no common DType exists for the given inputs. For example they cannot be stored in a single array unless the dtype is `object`. The full list of DTypes is: (<class 'numpy.dtype[int64]'>, <class 'numpy.dtype[datetime64]'>, <class 'numpy.dtype[float64]'>, <class 'numpy.dtype[float64]'>, <class 'numpy.dtype[float64]'>, <class 'numpy.dtype[float64]'>, <class 'numpy.dtype[float64]'>, <class 'numpy.dtype[float64]'>, <class 'numpy.dtype[float64]'>)"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.02928921568627451\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
+        "\n",
+        "clf_model = RandomForestClassifier(n_estimators = 30, max_depth = 5, random_state = 42)\n",
+        "clf_model.fit(X_train, y_train)\n",
+        "\n",
+        "y_pre_train = clf_model.predict(X_test)\n",
+        "print(accuracy_score(y_test, y_pre_train))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tZQgEc_9zhnV",
+        "outputId": "74430caa-1637-4506-fc8a-04595ea16e04"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.04583333333333333\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
+        "\n",
+        "clf_model = RandomForestClassifier(n_estimators = 50, max_depth = 5, random_state = 42)\n",
+        "clf_model.fit(X_train, y_train)\n",
+        "\n",
+        "y_pre_train = clf_model.predict(X_test)\n",
+        "print(accuracy_score(y_test, y_pre_train))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gqkk99BxzhfV",
+        "outputId": "5b9dd56e-293b-498f-8654-ccde58a5036a"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.05261437908496732\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
+        "\n",
+        "clf_model = RandomForestClassifier(n_estimators = 70, max_depth = 5, random_state = 42)\n",
+        "clf_model.fit(X_train, y_train)\n",
+        "\n",
+        "y_pre_train = clf_model.predict(X_test)\n",
+        "print(accuracy_score(y_test, y_pre_train))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RLwJesmlznhq",
+        "outputId": "75acfb9f-890a-4b4e-f2b5-56fff0803276"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.05959967320261438\n"
           ]
         }
       ]
@@ -1327,7 +1435,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "mWx1qVAUYaem"
+        "id": "gFr_rfCix_QV"
       },
       "execution_count": null,
       "outputs": []
